[gd_scene load_steps=5 format=3 uid="uid://jv514a664gha"]

[ext_resource type="Script" path="res://components/VirtualFixture/VirtualFixture.gd" id="1_4xcqs"]
[ext_resource type="Shader" path="res://assets/shaders/Glow.gdshader" id="2_rxc1o"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bd4x4"]
shader = ExtResource("2_rxc1o")
shader_parameter/rect_size = Vector2(0.1, 0.1)
shader_parameter/bness = 0.185
shader_parameter/fall_off_scale = 2.82
shader_parameter/b_offset = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0nr4c"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 48
corner_radius_top_right = 48
corner_radius_bottom_right = 48
corner_radius_bottom_left = 48
anti_aliasing_size = 0.618

[node name="VirtualFixture" type="GraphElement"]
offset_right = 100.0
offset_bottom = 100.0
script = ExtResource("1_4xcqs")

[node name="Control" type="Control" parent="."]
layout_mode = 2
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="Control"]
material = SubResource("ShaderMaterial_bd4x4")
layout_mode = 2
offset_left = -15.0
offset_top = -15.0
offset_right = 115.0
offset_bottom = 115.0
mouse_filter = 1

[node name="Color Box" type="PanelContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0nr4c")

[connection signal="dragged" from="." to="." method="_on_dragged"]
[connection signal="node_deselected" from="." to="." method="_on_node_deselected"]
[connection signal="node_selected" from="." to="." method="_on_node_selected"]
